test: translations + dvh

--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="bg-[#22389c]">
+<html lang="es" class="bg-[#22389c]">
 
 	<head>
 		<meta charset="utf-8" />
