add fonts and better styles

--- a/src/app.html
+++ b/src/app.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="es" class="bg-[#22389c]">
+<html lang="es" class="bg-modal-backdrop">
 
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="icon" href="%sveltekit.assets%/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
+		<title>La Martino Orquesta Típica - Sinfonía Estelar Tanguera</title>
 	</head>
 
 	<body data-sveltekit-preload-data="hover">
